fix: enforce previous style after chakraui reset and adequate spacing for pagination

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -13,10 +13,6 @@
     --number-of-lines-mobile: 5;
 }
 
-body {
-    margin: 8px;
-}
-
 /* reset button */
 button {
     background-color: transparent;
@@ -45,6 +41,11 @@ button {
 
 .btc-search .sui-layout-main {
     width: 100%;
+}
+.btc-search .sui-layout-main-footer {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 @media only screen and (max-width: 1200px) {
